# typing-performance-analyzer

./: LICENSE  README.md  pyproject.toml  requirements.txt
performance-analyzer/: main.py  pyproject.toml
performance-analyzer/samples/gboard/: change.json  delete_end.json  word_delete.json
performance-analyzer/samples/samsung/: autocorrect.json  delete_end.json  insert_middle.json  normal.json  prediction.json  word_delete.json
performance-analyzer/samples/swiftkey/: autocorrect.json  normal_2.json
performance_analyzer/: main.py
performance_analyzer/error_rate/: __init__.py  _core.py
performance_analyzer/performance_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
performance_analyzer/samples/gboard/: autocorrect.json  change_middle.json  gesture.json  insert_middle.json  normal.json  normal_2.json  prediction.json  typo.json  typo_middle.json
performance_analyzer/samples/samsung/: change.json  change_middle.json  normal_2.json  typo.json  typo_middle.json
performance_analyzer/samples/swiftkey/: change.json  change_middle.json  typo.json  (+6 more)
performance_analyzer/spellcheck/: __init__.py  _evaluationresult.py  _filereader.py  _spellchecker.py  _spellcheckerutil.py
performance_analyzer/test/: string_test.py
performance_analyzer/typing_path/: __init__.py  _core.py  _typingactivity.py
performance_analyzer/typing_speed/: __init__.py  _core.py  core.py
performance_analyzer/utils/: json.py  keyboard.json  keyboard_qwerty.json  keyboard_qwerty_turkish.json  session.py  string.py
test/: test_edit_util.py  test_spellchecker.py  test_string_util.py
(+23 files in other folders)
